--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ header{
     color: white;
     background-color: black;
     padding: 3px 40px;
+    border-bottom: 2px solid red;
 }
 header ul{
     display: flex;
@@ -58,14 +59,15 @@ main{
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
+    background-attachment: fixed;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 0 90px;
     color: white;
     gap: 50px;
+    padding: 50px 90px;
 }
 main #diva{
     display: flex;
@@ -117,6 +119,14 @@ h2{
 #divb p{
     margin: 10px 0;
 }
+footer{
+    background-color: black;
+    color: wheat;
+    padding: 80px;
+    text-align: center;
+    font-style: italic;
+    border-top: 2px solid red;
+}
 
 @media (max-width:700px) {
     header{
@@ -124,7 +134,7 @@ h2{
         flex-direction: column;
         align-items: center;
         justify-content: space-between;
-        padding-bottom: 5px;
+        padding-bottom: 25px;
     }
     header ul{
         display: flex;
@@ -138,10 +148,14 @@ h2{
         border-bottom:1px solid white ;
     }
     main{
-        margin-top: 10px;
         display: flex;
         flex-direction: column;
+        padding: 10px 5px;
         
+    }
+
+    form{
+        width: 100%;
     }
     
 }
