--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@ header #a:hover{
 }
 
 
-main{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.93),rgba(0, 0, 0, 0.807)),url("img.jpg");
+#main1{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.93),rgba(0, 0, 0, 0.807)),url("pexels-anna-nekrashevich-6802052.jpg");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -77,7 +77,7 @@ main #diva{
     border: 2px solid red;
     padding:  30px 50px;
     border-radius: 15px;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.682);
 }
 main #diva form{
     display: flex;
@@ -126,6 +126,53 @@ footer{
     text-align: center;
     font-style: italic;
     border-top: 2px solid red;
+    border-bottom: 2px solid red;
+}
+#main3{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.93),rgba(0, 0, 0, 0.807)),url("pexels-anna-nekrashevich-6802052.jpg");
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    height: 100%;
+    display: flex;
+    color: white;
+    gap: 10px;
+    padding: 150px 90px;
+}
+section{
+    border: 2px solid red;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.701);
+    text-align: center;
+    padding: 100px 10px;
+}
+#main2{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.93),rgba(0, 0, 0, 0.807)),url("pexels-anna-nekrashevich-6802052.jpg");
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    height: 100%;
+    display: flex;
+    color: white;
+    gap: 10px;
+    padding: 150px 90px;
+}
+#foot{
+    font-style: italic;
+    color: black;
+    text-align: center;
+    background-color: grey;
 }
 
 @media (max-width:700px) {
@@ -138,24 +185,34 @@ footer{
     }
     header ul{
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         justify-content: space-between;
         gap: 1px;
+        margin-top: 50px;
 
     }
     #div1{
         border-bottom:1px solid white ;
     }
-    main{
+    #main1 {
         display: flex;
         flex-direction: column;
-        padding: 10px 5px;
-        
+        justify-content: space-between;
+        align-items: center;
     }
-
-    form{
-        width: 100%;
+    #main2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
     }
+    #main3 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
     
 }
