--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ section{
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
+        gap: 10px;
     }
     main #diva{
         display: flex;
@@ -229,6 +230,7 @@ section{
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
+        gap: 10px;
     }
     #main3 {
         display: flex;
@@ -241,6 +243,7 @@ section{
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
+        gap: 10px;
     }
     
     
